@@ -175,7 +175,7 @@ class PokerAvatarTestCase(unittest.TestCase):
         self.destroyDb()
         self.setUpServer()
         self.client_factory = [None, None, None]
-        # Third client currently only used by test63, but put it here
+        # Third client currently only used by test63 and test73, but put it here
         # because it was easier and didn't slow things down too much.
         def connectClient2(client): 
             reactor.connectTCP('127.0.0.1', self.port, self.client_factory[2])
@@ -2014,7 +2014,6 @@ class PokerAvatarTestCase(unittest.TestCase):
         d2.addCallback(self.dealTable, 2)
         d2.addCallback(self.loseConnection, 2)
         return defer.DeferredList((d, d2))
-
     # ------------------------------------------------------------------------
     def loseConnectionAnte(self, (client, packet), gameId):
         table = self.service.getTable(gameId)
@@ -2990,9 +2989,117 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.quit)
         return d
     # ------------------------------------------------------------------------
+    def playWhilePlayerDisconnectsAndRejoin(self, (client, packet), gameId):
+        avatars = self.service.avatars
+        clients = {}
+        table = self.service.getTable(gameId)
+        for ii in [ 0, 1, 2]:
+            clients[ii] = self.service.serial2client[avatars[ii].getSerial()]
+            avatars[ii].resetPacketsQueue()
+            self.sitTable((clients[ii], None), ii, gameId)
+        for ii in [ 0, 1, 2]:
+            avatars[ii].resetPacketsQueue()
+            self.autoBlindAnte( (clients[ii], None), ii, gameId)
+        for ii in [ 0 ,1, 2]:
+            avatars[ii].resetPacketsQueue()
+            self.readyToPlay( (clients[ii], None), ii, gameId)
+
+#        self.timeout_policy = 'sitOut'
+        table.autodeal = True
+        self.dealTable((client, packet), gameId)
+        def findBigBlind(id):
+            bbPacket = None
+            packets = []
+            for ii in [ 0, 1, 2]: packets.extend(avatars[ii].resetPacketsQueue())
+            while bbPacket == None:
+                for packet in packets:
+                    if packet.type == PACKET_POKER_BLIND and packet.serial == avatars[id].getSerial():
+                        self.assertEquals(packet.amount, 200)
+                        self.assertEquals(packet.game_id, gameId)
+                        bbPacket = packet
+                        break
+            return bbPacket
+
+        self.assertNotEquals(findBigBlind(2), None)
+
+        # Player 0 fails to act in time
+        table.playerTimeoutTimer(clients[0].getSerial())
+
+        avatars[1].handlePacketLogic(PacketPokerFold(serial = clients[1].getSerial(),
+                                                     game_id = gameId))
+        avatars[0].resetPacketsQueue()
+        avatars[0].queuePackets()
+        handSkip = 0
+        while handSkip < 5:
+            handSkip += 1
+            # Player 1 folds, giving this pot to Player 2
+            self.dealTable((client, packet), gameId)
+            self.assertNotEquals(findBigBlind(1), None)
+            avatars[2].handlePacketLogic(PacketPokerFold(serial = clients[2].getSerial(),
+                                                         game_id = gameId))
+            self.dealTable((client, packet), gameId)
+            self.assertNotEquals(findBigBlind(2), None)
+            avatars[1].handlePacketLogic(PacketPokerFold(serial = clients[1].getSerial(),
+                                                         game_id = gameId))
+
+        # After this loop, a number of heads up hands have been played.
+        # Despite the fact that we set avatars[0] to queue packets before
+        # the loop started, we find that only the packets from the last
+        # hand are present.
+        count = 0
+        for pack in avatars[0]._packets_queue:
+            count += 1
+            self.assertEquals(pack.game_id, gameId)
+            if pack.type == PACKET_POKER_FOLD:
+                self.assertEquals(pack.serial, clients[1].getSerial())
+            elif pack.type == PACKET_POKER_POSITION:
+                self.assertEquals(pack.serial, 0)
+                self.assertEquals(pack.position == 1 or pack.position == -1, True)
+            elif pack.type == PACKET_POKER_RAKE:
+                self.assertEquals(pack.value, 10)
+            elif pack.type == PACKET_POKER_STATE:
+                self.assertEquals(pack.serial, 0)
+                self.assertEquals(pack.string, 'end')
+            elif pack.type == PACKET_POKER_WIN:
+                self.assertEquals(pack.serial, 0)
+                self.assertEquals(pack.serials, [ clients[2].getSerial()])
+            else:
+                self.failIf(True)
+        self.assertEquals(count, 6)
+        return (clients[2], None)
+    # ------------------------------------------------------------------------
+    def test73_packetReplayFromRelogin(self):
+        """Test when a player was in a hand, reconnects after other hands
+        have been played, and expects certain packet playback  packets."""
+        table = self.service.getTable(2)
+        table.autodeal = False
+        d = self.client_factory[0].established_deferred
+        d.addCallback(self.setupCallbackChain)
+        d.addCallback(self.sendRolePlay)
+        d.addCallback(self.login, 0)
+        d.addCallback(self.joinTable, 0, 2, 'Table2', '2-4-limit')
+        d.addCallback(self.seatTable, 0, 2)
+        d.addCallback(self.buyInTable, 0, 2, 10000)
+        d2 = self.client_factory[1].established_deferred
+        d2.addCallback(self.setupCallbackChain)
+        d2.addCallback(self.sendRolePlay)
+        d2.addCallback(self.login, 1)
+        d2.addCallback(self.joinTable, 1, 2, 'Table2', '2-4-limit')
+        d2.addCallback(self.seatTable, 1, 2)
+        d2.addCallback(self.buyInTable, 1, 2, 10000)
+        d3 = self.client_factory[2].established_deferred
+        d3.addCallback(self.setupCallbackChain)
+        d3.addCallback(self.sendRolePlay)
+        d3.addCallback(self.login, 2)
+        d3.addCallback(self.joinTable, 2, 2, 'Table2', '2-4-limit')
+        d3.addCallback(self.seatTable, 2, 2)
+        d3.addCallback(self.buyInTable, 2, 2, 10000)
+        d3.addCallback(self.playWhilePlayerDisconnectsAndRejoin, 2)
+        return defer.DeferredList((d, d2, d3))
+    # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test15"
+#    loader.methodPrefix = "test73"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
